# Adaptive_Packet_Padding_Approach_for_Smart_Home_Networks_A_Tradeoff_Between_Privacy_and_Performance

./: .gitignore  README.md  pyproject.toml  requirements.txt
Data/Configuration/: experimentConfiguration.json  experiment_configuration.json
adaptive_padding/: constants.py  creates_folder_structure.py  padding_strategies_evaluation.py  prepare_features.py  run_existing_padding.py  run_proposal_padding.py
adaptive_padding/experiment/: evaluation.py
adaptive_padding/padding/: exceptions.py  padding_strategy.py  strategies_mapping_factory.py
adaptive_padding/padding/adaptive_padding/: level100.py  level500.py  level700.py  level900.py
adaptive_padding/padding/existing/: exponential_padding.py  linear.py  mouse_elephant.py  mtu.py  random.py  random_255.py
adaptive_padding/utils/: utils.py
src/: existingStrategies.py  padding_evaluation_crossvalidation.py  padding_strategies_evaluation.py  prepare_features.py  proposal.py
tests/adaptive_padding/: conftest.py  test_level900.py
tests/existing/: conftest.py  test_exponential.py  test_mtu.py
